# rlhf-signatures

./: README.md  answers_claude-3-5-sonnet-20241022.csv  answers_deepseek-chat.csv  answers_deepseek-reasoner.csv  answers_gemini-2.0-flash.csv  answers_gemini-2.0-pro-exp-02-05.csv  answers_gpt-4o.csv  answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv  answers_o1.csv  bradley_terry.py  bradley_terry_copy_for_formulae.ods  claude-3-5-sonnet-20241022.csv  deepseek-chat.csv  gemini-2.0-flash.csv  generate_questions.py  get_answers.py  history_gpt-4o.csv  history_questions.csv  holidays_gemini-2.0-flash_old.csv  llm_interface.py  merge_spreadsheets.py  merged_answers_deepseek-chat.csv  merged_answers_deepseek-reasoner.csv  merged_answers_gemini-2.0-flash.csv  merged_answers_gemini-2.0-pro-exp-02-05.csv  merged_answers_gpt-4o.csv  merged_answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv  merged_answers_o1.csv  naive_order_bias.py  o1.csv  paired_order_bias.py  pyproject.toml  questions.csv  questions_folktale.csv  re_ask_question.py  redis_interface.py  results_order_bias.csv  strange.md  validate_answers.py
answers/: claude-3-5-sonnet-20241022.csv  gemini-2.0-flash.csv  merged_answers_o1.csv
answers_folktale/: answers_claude-3-5-sonnet-20241022.csv  answers_deepseek-ai_DeepSeek-R1.csv  answers_deepseek-ai_DeepSeek-V3.csv  answers_gemini-2.0-flash.csv  answers_gpt-4o.csv  answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv  answers_o1.csv
answers_food/: deepseek-chat.csv  deepseek-reasoner.csv  gemini-2.0-flash.csv  gemini-2.0-pro-exp-02-05.csv  gpt-4o.csv  meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv  o1.csv
answers_history/: answers_claude-3-5-sonnet-20241022.csv  answers_deepseek-ai_DeepSeek-R1.csv  answers_deepseek-ai_DeepSeek-R1_cleaned.csv  answers_deepseek-ai_DeepSeek-V3.csv  answers_gemini-2.0-flash.csv  answers_gpt-4o_cleaned.csv  answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo_cleaned.csv  answers_o1.csv  deepseek-reasoner.csv  gpt-4o.csv  history_gemini-2.0-flash.csv  meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv
answers_history/old/: deepseek-ai_DeepSeek-R1.csv  deepseek-chat.csv
answers_history/unclean/: answers_gpt-4o.csv  answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv
answers_holiday/: holidays_gemini-2.0-flash_new.csv  holidays_gpt-4o.csv
answers_snack/: answers_claude-3-5-sonnet-20241022.csv  answers_deepseek-ai_DeepSeek-R1_cleaned.csv  answers_deepseek-ai_DeepSeek-V3_cleaned.csv  answers_gemini-2.0-flash.csv  answers_gemini-2.0-flash_cleaned.csv  answers_gpt-4o.csv  answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo_cleaned.csv  answers_o1.csv
answers_snack/unclean/: answers_deepseek-ai_DeepSeek-R1.csv  answers_deepseek-ai_DeepSeek-V3.csv  answers_gemini-2.0-flash.csv  answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv
dataset/: merged_answers_claude-3-5-sonnet-20241022.csv  merged_answers_deepseek-reasoner.csv  merged_answers_gemini-2.0-pro-exp-02-05.csv  merged_answers_gpt-4o.csv  merged_answers_meta-llama_Meta-Llama-3.1-405B-Instruct-Turbo.csv
questions/: food_questions_short.csv  holidays_questions.csv  questions.csv  questions_short.csv  snack.csv
results/: bradley_terry.csv
results_food/: bradley_terry.csv
results_history/: bradley_terry.csv
results_snack/: bradley_terry.csv
statistical_analysis/: bradley_terry.py  naive_order_bias.py
